# conspiracy_bingo

./: Cargo.toml  justfile  shell.nix
assets/: conspiracies.json
src/: lib.rs
