[package]
name = "bingo"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
serde_json = "1.0"
anyhow = "1.0.31"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
serde = "1.0"